# CogniMed

./: .gitignore  README.md  pyproject.toml
app/: main.py  settings.py
app/api/v1/: auth.py  chat.py  post.py  priscription.py  user.py
app/db/: auth.py  base.py  db_schema.py  doctor.py  post.py  priscription.py  user.py
app/schema/: auth.py  chat.py  post.py  user.py
app/utils/: auth.py  faiss_backfill.py  faiss_utils.py  med_record_processor.py  pdf_utils.py  security.py
custom_yolo_model/train/: results.csv
static/: PLACEHOLDER
